# prompt-injection

./: README.md  analysis.ipynb  attacks.csv  barely_benign_prompts.csv  injection_success_rates.parquet  malicious_prompts.csv  paper.bib  paper.typ  pyproject.toml  templates_and_rules.csv  token-gradients.py
tables/: attack_attribution_delta.csv  attribution_distance_average_precision.csv  delta_p_refusal.csv  injection_success.csv  injection_success_by_model.csv  robustness_check.csv
